--- a/aws/post_boot_config/vault-openvpn/templates/client.conf
+++ b/aws/post_boot_config/vault-openvpn/templates/client.conf
@@ -1,10 +1,9 @@
-remote vpn.{{ vpn_domain | regex_replace('_', '.') }} 1194 udp
+remote vpn.VPN_DOMAIN 1194 udp
 
 client
 nobind
 dev tun
 
-{% raw %}
 <ca>
 {{ .CertAuthority }}
 </ca>
@@ -21,5 +20,4 @@ key-direction 1
 <tls-auth>
 {{ .TLSAuth }}
 </tls-auth>
-{% endraw %}
 
