--- a/aws/post_boot_config/vault-openvpn/templates/linuxclient.conf
+++ b/aws/post_boot_config/vault-openvpn/templates/linuxclient.conf
@@ -1,4 +1,4 @@
-remote vpn.{{ vpn_domain | regex_replace('_', '.') }} 1194 udp
+remote vpn.VPN_DOMAIN 1194 udp
 
 client
 nobind
@@ -9,7 +9,7 @@ up /etc/openvpn/update-systemd-resolved
 down /etc/openvpn/update-systemd-resolved
 down-pre
 
-{% raw %}
+
 <ca>
 {{ .CertAuthority }}
 </ca>
@@ -26,4 +26,4 @@ key-direction 1
 <tls-auth>
 {{ .TLSAuth }}
 </tls-auth>
-{% endraw %}
+
