--- a/aws/post_boot_config/vault-openvpn/templates/server.conf
+++ b/aws/post_boot_config/vault-openvpn/templates/server.conf
@@ -7,20 +7,19 @@ proto udp
 dev tun
 keepalive 10 120
 
-{% raw %}
 local {{`{{ GetPrivateIP }}`}}
-{% endraw %}
+
 
 # push multiple domains
-push "route {{vpc_active_subnet}} 255.255.0.0"
+push "route VPC_ACTIVE_SUBNET 255.255.0.0"
 
 # This tells the client to use these internal name servers when on the VPN
 push "dhcp-option DOMAIN-SEARCH node.city.consul"
 push "dhcp-option DOMAIN-SEARCH service.city.consul"
 
-{% raw %}
+
 push "dhcp-option DNS {{`{{ GetPrivateIP }}`}}"
-{% endraw %}
+
 
 # avoid accessing certain resources on restart
 persist-key
@@ -38,10 +37,9 @@ inactive 900
 
 client-to-client
 duplicate-cn
-server {{vpc_vpn_subnet}} 255.255.255.0
+server VPC_VPN_SUBNET 255.255.255.0
 ifconfig-pool-persist /etc/openvpn/ipp.txt
 
-{% raw %}
 <ca>
 {{ .CertAuthority }}
 </ca>
@@ -62,5 +60,5 @@ key-direction 0
 <tls-auth>
 {{ .TLSAuth }}
 </tls-auth>
-{% endraw %}
+
 
