--- a/aws/cloud-init/dmz_host.yml
+++ b/aws/cloud-init/dmz_host.yml
@@ -1,5 +1,8 @@
 #cloud-config
 ---
+manage_etc_hosts: localhost
+hostname: ${hostname}
+
 system_info:
   default_user:
     name: alan
@@ -19,5 +22,3 @@ write_files:
       gh:MatthewTighe
       gh:luongthomas
       gh:xophere
-
-hostname: ${hostname}
